src/test/ui/wf/higher-ranked/on-impl-not-implied.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'b` due to conflicting requirements
  --> $DIR/on-impl-not-implied.rs:11:14
   |
LL | impl<'a, 'b> Foo<'a, 'b> for ()
   |              ^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime `'b` as defined here...
  --> $DIR/on-impl-not-implied.rs:11:10
   |
LL | impl<'a, 'b> Foo<'a, 'b> for ()
   |          ^^
note: ...but the lifetime must also be valid for the lifetime `'a` as defined here...
  --> $DIR/on-impl-not-implied.rs:11:6
   |
LL | impl<'a, 'b> Foo<'a, 'b> for ()
   |      ^^
note: ...so that the types are compatible
  --> $DIR/on-impl-not-implied.rs:11:14
   |
LL | impl<'a, 'b> Foo<'a, 'b> for ()
   |              ^^^^^^^^^^^
   = note: expected `Foo<'a, 'b>`
              found `Foo<'_, '_>`

error[E0491]: in type `&'a &'b ()`, reference has a longer lifetime than the data it references
  --> $DIR/on-impl-not-implied.rs:13:5
   |
LL |     &'a &'b ():,
   |     ^^^^^^^^^^
   |
note: the pointer is valid for the lifetime `'a` as defined here
  --> $DIR/on-impl-not-implied.rs:11:6
   |
LL | impl<'a, 'b> Foo<'a, 'b> for ()
   |      ^^
note: but the referenced data is only valid for the lifetime `'b` as defined here
  --> $DIR/on-impl-not-implied.rs:11:10
   |
LL | impl<'a, 'b> Foo<'a, 'b> for ()
   |          ^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0491, E0495.
For more information about an error, try `rustc --explain E0491`.
